# FusionGuard

./: .gitignore  LICENSE  README.md  SPEC.md
api/: openapi.yaml
configs/dev/: api_gateway.yaml  inference_service.yaml  ingestor.yaml  rules.yaml
configs/prod/: api_gateway.yaml  features.yaml  inference_service.yaml  ingestor.yaml  rules.yaml
deploy/: docker-compose.yml
deploy/grafana/: datasource.yml
deploy/grafana/dashboards/: fusionguard.json
deploy/prometheus/: prometheus.yml
deploy/sql/: 001_init.sql.bak
pkg/storage/: go.mod  postgres.go  postgres_test.go  schema.go
pkg/telemetry/: go.mod  telemetry.go
proto/telemetry/v1/: admin.proto  features.proto  risk.proto  telemetry.proto
scripts/: lint.sh  loadgen.sh  replay_shot.sh  test.sh
services/api_gateway/: go.mod
services/api_gateway/cmd/api_gateway/: main.go
services/api_gateway/internal/config/: config.go
services/api_gateway/test/: config_test.go
services/feature_service/: go.mod  go.sum
services/feature_service/test/: config_test.go
services/inference_service/: go.mod
services/inference_service/test/: config_test.go
services/ingestor/: go.mod
services/ingestor/test/: config_test.go
test/integration/: pipeline_test.go
trainer/: README.md  pyproject.toml
trainer/fusionguard_trainer/: __init__.py  calibrate.py  dataset.py  eval.py  export_onnx.py  features.py  labeling.py  loaders.py  reports.py  train.py
trainer/tests/: test_dataset.py  test_export.py  test_labeling.py
ui/: index.html
ui/static/css/: style.css
ui/static/js/: app.js
(+24 files in other folders)
